--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "### Overview",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0-beta.1",
     "dotenv": "^6.2.0",
     "moment": "^2.22.2",
     "node-spotify-api": "^1.0.7"
